# MakeFarm

./: .clang-format  .gitignore  README.md  buildVSProject.bat  premake5.lua
.github/workflows/: build_on_release.yml  clang-format-check.yml  cmake_windows_tests.yml
MakeFarm/: CMakeLists.txt  settings.cfg
MakeFarm/resources/Blocks/: Air.cfg  Cactus.cfg  Cobblestone.cfg  Dirt.cfg  DryGrass.cfg  Grass.cfg  Gravel.cfg  Ice.cfg  Leaves.cfg  Log.cfg  Planks.cfg  Sand.cfg  SnowyGrass.cfg  SnowyLeaves.cfg  SpruceLog.cfg  SpurcePlanks.cfg  Stone.cfg  Water.cfg
MakeFarm/resources/Items/: CactusBlock.cfg  CobblestoneBlock.cfg  DirtBlock.cfg  GravelBlock.cfg  LogBlock.cfg  PlanksBlock.cfg  SandBlock.cfg  SpruceLogBlock.cfg  SprucePlanksBlock.cfg  Stick.cfg  StoneBlock.cfg  WoodenPickaxe.cfg  WoodenSword.cfg
MakeFarm/resources/Shaders/: FragmentShader.shader  VertexShader.shader
MakeFarm/resources/Shaders/3DWorldRenderer/: FragmentShader.shader  VertexShader.shader
MakeFarm/resources/Shaders/WireframeRenderer/: FragmentShader.shader  GeometryShader.shader  VertexShader.shader
MakeFarm/resources/Textures/alternativeTextures/: config.cfg
MakeFarm/resources/Textures/defaultTextures/: blocks.pyxel  config.cfg  items.pyxel  textures.pyxel
MakeFarm/resources/Textures/texturePacks/alternativeTextures/: blocks.pyxel  config.cfg  items.pyxel  textures.pyxel
MakeFarm/resources/Textures/texturePacks/defaultTextures/: blocks.pyxel  items.pyxel
MakeFarm/src/: CMakeLists.txt  CMakeLists_Sources.txt  Game.cpp  Game.h  main.cpp  pch.h
MakeFarm/src/Physics/: AABB.cpp  AABB.h
MakeFarm/src/Player/: Hearts.cpp  Hearts.h  Player.cpp  Player.h
MakeFarm/src/Player/GUI/: Healthbar.cpp  Healthbar.h  Hotbar.cpp  Hotbar.h  Inventory.cpp  Inventory.h  InventorySlot.cpp  InventorySlot.h  ItemSlot.cpp  ItemSlot.h  ItemSlots.cpp  ItemSlots.h
MakeFarm/src/Player/GUI/Bars/: DiscreteBar.cpp  DiscreteBar.h  DiscreteBarValue.cpp  DiscreteBarValue.h  Healthbar.cpp  Healthbar.h  Hotbar.cpp  Hotbar.h  Oxygenbar.cpp  Oxygenbar.h
MakeFarm/src/Renderer3D/: Buffer.cpp  Buffer.h  BufferElement.cpp  BufferElement.h  BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  Mesh3D.cpp  Mesh3D.h  Model3D.cpp  Model3D.h  Renderer3D.cpp  Renderer3D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
MakeFarm/src/Renderer3D/Meshes/: Mesh3D.h  WireframeBlockMesh.cpp  WireframeBlockMesh.h  WorldBlockMesh.cpp  WorldBlockMesh.h
MakeFarm/src/Renderer3D/Meshes/Builders/: BlockMeshBuilder.cpp  BlockMeshBuilder.h  MeshBuilder.cpp  MeshBuilder.h  WireframeBlockMeshBuilder.cpp  WireframeBlockMeshBuilder.h
MakeFarm/src/Resources/: BlockList.h  ResourceManager.h  Resources.h  TexturePack.cpp  TexturePack.h  TextureSheet.h
MakeFarm/src/States/: State.cpp  State.h  StateStack.cpp  StateStack.h  States.h
MakeFarm/src/States/Application_States/: DeathState.cpp  DeathState.h  ExitGameState.cpp  ExitGameState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h
MakeFarm/src/Utils/: CoordinateBase.cpp  CoordinateBase.h  Direction.h  IteratorRanges.cpp  IteratorRanges.h  Mouse.cpp  Mouse.h  MultiDimensionalArray.h  Serializer.cpp  Serializer.h  Settings.cpp  Settings.h  message_assert.h  utils.cpp  utils.h
MakeFarm/src/World/: Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h
MakeFarm/src/World/Biomes/: Biome.cpp  Biome.h  BiomeId.h  DesertBiome.cpp  DesertBiome.h  ForestBiome.cpp  ForestBiome.h  SnowyBiome.cpp  SnowyBiome.h  VeryDryForestBiome.cpp  VeryDryForestBiome.h
MakeFarm/src/World/Block/: Block.cpp  Block.h  BlockId.h  BlockMap.cpp  BlockMap.h  BlockType.cpp  BlockType.h  FacedBlock.cpp  FacedBlock.h  HighlightedBlock.cpp  HighlightedBlock.h  TextureId.h  WireframeBlock.cpp  WireframeBlock.h
MakeFarm/src/World/Chunks/: AsyncProcessedObjects.cpp  AsyncProcessedObjects.h  Chunk.cpp  Chunk.h  ChunkContainer.cpp  ChunkContainer.h  ChunkInterface.cpp  ChunkInterface.h  ChunkManager.cpp  ChunkManager.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  CoordinatesAroundOriginGetter.cpp  CoordinatesAroundOriginGetter.h  MeshBuilder.cpp  MeshBuilder.h  RebuildOperation.h  TerrainGenerator.cpp  TerrainGenerator.h
MakeFarm/src/World/Crafting/: Crafting.cpp  Crafting.h  Recipe.cpp  Recipe.h  RecipeContainer.cpp  RecipeContainer.h  RecipeSettings.cpp  RecipeSettings.h
MakeFarm/src/World/Item/: Item.cpp  Item.h  ItemId.h  ItemMap.cpp  ItemMap.h  ItemType.cpp  ItemType.h
MakeFarm/tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
MakeFarm/tests/mocks/: CMakeLists.txt
MakeFarm/tests/mocks/src/States/: MockState.h  MockStateStack.h
MakeFarm/tests/mocks/src/World/Chunks/: MockChunk.h
MakeFarm/tests/mt/: CMakeLists.txt
MakeFarm/tests/ut/: CMakeLists.txt
MakeFarm/tests/ut/src/: SampleTest.cpp  StateStackTest.cpp
MakeFarm/tests/ut/src/Physics/: AABBTest.cpp
MakeFarm/tests/ut/src/Player/GUI/Bars/: DiscreteBarValueTest.cpp
MakeFarm/tests/ut/src/Renderer3D/Meshes/Builders/: BlockMeshBuilderTest.cpp  WireframeBlockMeshBuilderTest.cpp
MakeFarm/tests/ut/src/World/Biomes/: DesertBiomeTest.cpp  ForestBiomeTest.cpp  SnowyBiomeTest.cpp  VeryDryForestBiomeTest.cpp
MakeFarm/tests/ut/src/World/Block/: BlockCoordinateTest.cpp
MakeFarm/tests/ut/src/World/Chunks/: ChunkContainerCoordinateTest.cpp  ChunkContainerTest.cpp  CoordinatesAroundOriginGetterTest.cpp  TerrainGeneratorTest.cpp
MakeFarm/tests/utils/: CMakeLists.txt
MakeFarm/tests/utils/src/TestUtils/: BiomeTestUtils.cpp  BiomeTestUtils.h
MakeFarm/tests/utils/src/TestUtils/SFML/: EventEqualityOperator.cpp  EventEqualityOperator.h
MakeFarm/tests/utils/src/TestUtils/SFML/Stubs/: RenderTargetStub.cpp  RenderTargetStub.h
docs/uml_modelio/MakeFarm/: project.conf
docs/uml_modelio/MakeFarm/data/fragments/ModelerModule/content/: metadatas.xml
docs/uml_modelio/MakeFarm/data/fragments/PredefinedTypes 3.9.00/content/: metadatas.xml
docs/uml_modelio/MakeFarm/data/localmodel/: localmodel.dbf.0  localmodel.dbr.0  localmodel.idf.0  localmodel.idr.0
(+139 files in other folders)
